Final cleanup of panel headers, spacing issues, and general all around professionalism

--- a/mystyle.css
+++ b/mystyle.css
@@ -38,6 +38,13 @@ body {
     width: 150px;
     height: 150px; }
 
+.user-name {
+  position: absolute;
+  top: 240px;
+  left: 200px;
+  z-index: 10;
+  color: white; }
+
 .user-nav ul {
   padding-left: 180px; }
 .user-nav ul:last-child {
@@ -84,5 +91,11 @@ body {
 
 .photo-container h3 {
   display: inline; }
+
+.panel-header {
+  margin: 0px 0px 8px 0px; }
+
+.photo-container img {
+  margin: 5px 0px 5px 0px; }
 
 /*# sourceMappingURL=mystyle.css.map */
